deployment/backstage/backstage.yaml
---
# kubernetes/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    app: backstage
    environment: prod
    team: devnull
    app.kubernetes.io/managed-by: gcp-cloud-build-deploy
    backstage.io/kubernetes-id: backstage
spec:
  replicas: 2 # kpt-set: ${min_replicas}
  selector:
    matchLabels:
      app: backstage
      environment: prod
      app.kubernetes.io/managed-by: gcp-cloud-build-deploy
      backstage.io/kubernetes-id: backstage
  template:
    metadata:
      labels:
        app: backstage
        environment: prod
        app.kubernetes.io/managed-by: gcp-cloud-build-deploy
        backstage.io/kubernetes-id: backstage
        team: devnull
    spec:
      serviceAccountName: backstage
      containers:
        - name: backstage
          image: us-east4-docker.pkg.dev/bits-gke-clusters/bits/backstage:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1000m"
              memory: "3G"
            requests:
              cpu: "390m"
              memory: "3G"
          volumeMounts:
            - name: backstage-secrets
              mountPath: /workspace/secrets
          ports:
            - name: http
              containerPort: 7007
              # Uncomment if health checks are enabled in your app:
              # https://backstage.io/docs/plugins/observability#health-checks
          readinessProbe:
            httpGet:
              port: 7007
              path: /.backstage/health/v1/readiness
            initialDelaySeconds: 120
          # livenessProbe:
          #   httpGet:
          #     port: 7007
          #     path: /healthcheck
      volumes:
        - name: backstage-secrets
          csi:
            driver: secrets-store-gke.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: backstage
