deployment/backstage/backstage-service.yaml
# kubernetes/backstage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    environment: prod
    app.kubernetes.io/managed-by: gcp-cloud-build-deploy
    backstage.io/kubernetes-id: backstage
spec:
  selector:
    app: backstage
    environment: prod
    app.kubernetes.io/managed-by: gcp-cloud-build-deploy
    backstage.io/kubernetes-id: backstage
  ports:
    - name: http
      port: 80
      targetPort: http
