deployment/backstage/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  namespace: backstage
spec:
  hostnames:
    - backstage.broadinstitute.org # kpt-set: ${cert-name}
  parentRefs:
    - name: external-gw-01
      namespace: mcp
  rules:
    - backendRefs:
        - name: backstage
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
